# exe-modifier

./: .gitignore  CMakeLists.txt  Make.bat  MakeSetup.bat
example1/: Make.bat  calc.def  helloWorld.cc
example1/5.2.3790.3959-x64/: Make.bat  calc.def
example2/: Make.bat  calc.def  conical.cc  happiness_island.mod  sound_test.cc  surface.cc  surface.h  waveout.cc  waveout.h  xmp.h
lib/: Make.bat  dlldef.cc  dlldef.h  stdafx.cc  stdafx.h  stdshit.cc  stdshit.h
lib/btree/: btree.h  btree_container.h  btree_test.h  safe_btree.h
src/: debug.cpp  def_file.cpp  def_ops.cc  def_ops.h  dflink.cpp  exe_mod.cc  exe_mod.h  main.cpp  modfile.cc  setup.cpp
src/asmpatch/: asmPatch.cpp  x86ins.cpp
src/linker/: except.cc  exports.cpp  gc-sections.cpp  imports.cpp  library.cpp  linker.cc  linker.h  object.cpp  relocs.cpp  symtab.cpp
src/miscLib/: Make.bat  atexit.s  main.s  matherr.s  misc.cpp  snprintf.s  stubgen.cc  vsnprintf.s  wmain.s
src/peFile/: freeBlock.cpp  freeBlock.h  peBlock.cc  peBlock.cpp  peBlock.h  peExcept.cc  peExcept.h  peExport.cc  peExport.cpp  peExport.h  peFile.cc  peFile.h  peFileInt.h  peFileWr.cc  peFile_.cc  peFile_.h  peHead.cc  peHead.h  peImport.cc  peImport.cpp  peImport.h  peMapp.cc  peMapp.h  peReloc.cc  peReloc.cpp  peReloc.h  peResize.cpp  peSymTab.cc  peSymTab.h
